media/jellyfin/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: media
  labels:
    app: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
    - port: 8096
      name: jellyfin
