media/jellyfin/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/client-max-body-size: "20m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - jellyfin.services.juicecloud.org
      secretName: jellyfin-cert
  rules:
    - host: jellyfin.services.juicecloud.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
